<resources>
    <string name="app_name">SuitmediaTestApp</string>
    <string name="add_photo">add_Photo</string>
    <string name="name">Name</string>
    <string name="polindrome">Polindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="third_screen">Third Screen</string>
    <string name="ispalindrome">isPalindrome</string>
    <string name="notpalindrome">not palindrome</string>
    <string name="sentence">The Sentence</string>
    <string name="ok">OK</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="retry">Retry</string>
</resources>