<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_gravity="center_vertical"
    android:background="@drawable/background_1"
    tools:context=".view.FirstScreenActivity">
    
    <ImageView
        android:id="@+id/id_add_photo"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/add_photo"
        android:scaleType="fitXY"
        android:elevation="2dp"
        android:adjustViewBounds="true"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_photo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColorHint="@color/grey"
        android:hint="@string/name"
        app:boxStrokeColor="@color/white"
        app:endIconMode="clear_text"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/id_add_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxEms="10"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/white"
        android:hint="@string/polindrome"
        android:textColorHint="@color/grey"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputText1">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sentence_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:maxEms="15"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/check_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/check"
        android:background="@drawable/button_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputText2"/>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/next"
        android:background="@drawable/button_bg"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>